# anki_word_processor

./: .gitignore  .pre-commit-config.yaml  README.md  export_cards.py  main.py  process_words.py  pyproject.toml  run.bat
src/: config.py  db.py  export_cards.py  main.py  process_words.py  search.py
src/plugins/: __init__.py  base_plugin.py  en_2_ru.py  ru_2_cn.py
tests/: test_search.py
